# mclines

./: .gitignore  CMakeLists.txt  README.md
include/: diag.hpp  drawer.hpp
src/: diag.cpp  drawer.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
